# Chronix

./: .env.example  .gitignore  Checklist  Dockerfile  LICENSE  README.md  apply_nginx_config.sh  dashboard_server.py  docker-compose.yml  file.txt  main.py  nginx_chronix.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  setup_nginx.sh  skl.sh
.github/instructions/: chronix.instructions.md
.github/prompts/: chronix.prompt.md
.github/workflows/: integration.yml
chronix_bot/: __init__.py  bot.py  config.py
chronix_bot/dashboard/: README.md  __init__.py  app.py  oauth.py  session.py  worker.py
chronix_bot/utils/: ai_client.py  analytics.py  announcements.py  battle_engine.py  battle_logs.py  battle_renderer.py  dashboard.py  db.py  enemies.py  health.py  helpers.py  i18n.py  interest.py  inventory.py  inventory_extras.py  invite_config.py  invites.py  logger.py  loot.py  models.py  music_queue.py  music_utils.py  perms.py  persistence.py  prompt_sanitizer.py  reminders.py  rewards.py  telemetry.py  tempvc.py  weapons.py  welcomer.py  xp.py
cogs/: general.py  moderation.py
dashboard/: README.md  index.html  package-lock.json  package.json
data/: announcements.json  dashboard_actions.json  dashboard_cogs_status.json  dashboard_settings.json  dashboard_trigger  inventories.json  invites.json  loot_tables.yaml  music_queues.json  pet_species.yaml
docs/: deployment.md  schema.md
reports/: chronix_smoke.json
scripts/: dashboard_smoke_test.py  integration_test_postgres.py  run_integration_db_test.sh  run_migrations.py  test_inmemory_transactions.py
tests/: test_ai_client.py  test_announcements.py  test_bank.py  test_battle_engine.py  test_dashboard.py  test_dashboard_smoke.py  test_dashboard_ui.py  test_economy.py  test_enemies_and_battles.py  test_gambling.py  test_inventory.py  test_inventory_extras.py  test_invites.py  test_marketplace.py  test_moderation_utils.py  test_music_queue.py  test_prompt_sanitizer.py  test_reminders.py  test_sandbox.py  test_tempvc.py  test_weapons_durability.py  test_welcomer.py  test_xp.py
(+74 files in other folders)
