[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chronix"
version = "0.0.0"
description = "Chronix Discord bot (development)"
requires-python = ">=3.9"
dependencies = [
    # Core Dependencies
    "discord.py[voice]>=2.0.0",
    "aiohttp>=3.8.0",
    "pydantic>=1.10.0",
    "python-dotenv>=0.21.0",
    "asyncpg>=0.27.0",
    
    # Testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.22.0",
    "pytest-cov>=4.1.0",
    
    # Audio
    "wavelink>=3.0.0",
    
    # Games
    "python-chess>=1.999",
    
    # Image Processing
    "Pillow>=9.0.0",
    
    # Dashboard
    "fastapi[all]>=0.95.0",
    "uvicorn[standard]>=0.20.0",
    "httpx>=0.24.0",
    "authlib>=1.2.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.1.2",
    "starlette>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.0.0",
    "python-multipart>=0.0.6",
    
    # Optional Features
    "docker>=6.1.0",
    "websockets>=11.0.0",
    
    # Database
    "asyncpg>=0.27.0",
    "alembic>=1.12.0",
    
    # Utilities
    "PyYAML>=6.0.0",
    "requests>=2.31.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.1.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
packages = ["chronix_bot"]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
